--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,3 +9,20 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+
+.mainContainer {
+    background-color: black;
+    /*height: 40px;
+    //width: 400px;
+    //padding: 20px;*/
+    display: flex;
+}
+
+.digit {
+    color: white;
+    margin: 10px;
+    padding: 20px;
+    width: 75px;
+    font-size: 30px;
+    border: solid #253237;
+}
